# std_traits_ext

./: CMakeLists.txt  README.md  deps.sh  main.cpp
cmake/modules/: FindGoogleTest.cmake
src/type_traits/: type_properties.hpp  type_relationships.hpp  utilities.hpp
src/type_traits/utilities/: utilities.hpp
test/: CMakeLists.txt
test/helper/: types.h
test/type_traits/: test.cpp  type_properties_test.cpp  type_relationships_test.cpp
