

set(BASE_SRC_DIR ${CMAKE_SOURCE_DIR}/${PROJECT_SRC_DIR})
set(SRC_TYPE_TRAITS_DIR ${BASE_SRC_DIR}/type_traits)

message(${BASE_SRC_DIR})
set(
    TEST_INCLUDE_DIRS
    ${SRC_TYPE_TRAITS_DIR}
    ${GOOGLETEST_INCLUDE_DIRS}
)

set(
    TARGET_LINK_LIBS
    ${CMAKE_THREAD_LIBS_INIT}
    ${GOOGLETEST_LIBRARIES} -lpthread
)

set(TARGET_TEST_TYPE_PROPERTIES test_type_properties)

set(TARGET_TEST_TYPE_PROPERTIES_SOURCES type_traits/type_properties_test.cpp)
add_executable(${TARGET_TEST_TYPE_PROPERTIES} ${TARGET_TEST_TYPE_PROPERTIES_SOURCES})
target_include_directories(${TARGET_TEST_TYPE_PROPERTIES} PRIVATE ${TEST_INCLUDE_DIRS})
target_link_libraries(${TARGET_TEST_TYPE_PROPERTIES} PRIVATE ${TARGET_LINK_LIBS})
add_test(NAME ${TARGET_TEST_TYPE_PROPERTIES} COMMAND ${TARGET_TEST_TYPE_PROPERTIES})
